# erl_lib

./: LICENSE  README.md  pyproject.toml  train.py
config/: train.yaml
config/agent/: base.yaml  dhmbpo.yaml  mbpo.yaml  sac.yaml  sac_new.yaml  svg.yaml
config/agent/actor/: diag_gaussian.yaml
config/agent/critic/: ensemble.yaml
config/agent/dynamics_model/: deep_ensemble.yaml
config/agent/model_train/: base_train.yaml  deep_ensemble.yaml
config/env/: dmc.yaml  gym-robo.yaml  gym.yaml  myosuite.yaml
diagnostics/: fit_on_data.py  fit_on_toy.py  utils.py
erl_lib/agent/: sac.py  svg.py
erl_lib/agent/model_based/: model_env.py
erl_lib/agent/module/: layer.py
erl_lib/base/: __init__.py  agent.py  datatype.py  env.py
erl_lib/envs/: __init__.py  reward.py  terminataion.py
erl_lib/envs/dmc/: __init__.py  acrobot_down.py  cartpole_down.py  from_dm.py  hopper_lying.py  humanoid_lying.py  walker_lying.py
erl_lib/envs/gym/: __init__.py  ant.py  half_cheetah.py  hopper.py  humanoid.py  locomotion.py  pendulum.py  walker_2d.py
erl_lib/envs/myosuite/: from_myosuite.py
erl_lib/util/: env.py  logger.py  misc.py  misc.py~
results/: README.md
results/ablation/ReLU/: Ant.csv  HalfCheetah.csv  Hopper.csv  Humanoid.csv  Walker2d.csv  cartpole-swingup_sparse.csv  finger-turn_hard.csv  hopper-stand.csv  humanoid-stand.csv  quadruped-run.csv
results/ablation/no-roll/: Ant.csv  HalfCheetah.csv  Hopper.csv  Humanoid.csv  Walker2d.csv  cartpole-swingup_sparse.csv  finger-turn_hard.csv  hopper-stand.csv  humanoid-stand.csv  quadruped-run.csv
(+343 files in other folders)
